3 files modified, 2 deleted

--- a/src/app/contenido4/contenido4.component.html
+++ b/src/app/contenido4/contenido4.component.html
@@ -25,7 +25,9 @@ style="background: url(https://image.shutterstock.com/image-vector/cross-sign-el
   </tr>
 </table>
 
-<input type="text" id="searchBox" [ngModel]="micadena"/>
+<input type="text" id="searchBox" [(ngModel)]="micadena" (ngModelChange)="ngOnChanges()"/><br><br>
+
+<h1>texto es {{micadena}}</h1>
 
 <!--Condicion original contadorH>=1 && i<indexH
 <table border=1 align="center">
