2 files modified, 1 added, 1 deleted

--- a/src/app/contenido4/contenido4.component.html
+++ b/src/app/contenido4/contenido4.component.html
@@ -25,7 +25,7 @@ style="background: url(https://image.shutterstock.com/image-vector/cross-sign-el
   </tr>
 </table>
 
-<input type="text" id="searchBox" [(ngModel)]="micadena" (ngModelChange)="ngOnChanges()"/><br><br>
+<input type="text" id="searchBox" [(ngModel)]="setCadena" (ngModelChange)="ngOnChanges()"/><br><br>
 
 
 <!--Condicion original contadorH>=1 && i<indexH
